# tinyrenderer-rs

./: Cargo.toml  README.md  test.tga  tinyrenderer-rs.code-workspace
src/: const.rs  lib.rs  light.rs  main.rs  model.rs  renderer.rs  vec.rs
