[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
image = "0.24.5"
stopwatch = "0.0.7"
eframe = "0.20.1"
egui_extras = "0.20.0"
rand = "0.8.5"